# libcompra

./: .gitignore  CMakeLists.txt  HOW_TO_INSTALL  Makefile  README.md  install.sh  install_legacy.sh
include/compra/: compra.h  export.h
src/: compra.cpp
tests/: unit.cpp
tests/framework/: test_framework.cpp  test_framework.h
